--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./public/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#fb1" />
     <meta name="description" content="Dogs - Rede social para cachorros." />
+    <link rel="apple-touch-icon" href="./public/logo192.png" />
     <title>Dogs</title>
   </head>
   <body>
+    <noscript>É necessário habilitar o JavaScript para visualizar este site.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
