--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <body>
     <noscript>É necessário habilitar o JavaScript para visualizar este site.</noscript>
     <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
+    <script type="module" src="./src/index.jsx"></script>
   </body>
 </html>
